[package]
name = "rs-filestore"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-prom = "0.7.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
futures-util = "0.3.30"
actix-multipart = "0.6.1"
rand = "0.8"
openssl = "0.10"
image = "0.24"
num_cpus = "1.16.0"
